# GameOfLife

./: .gitignore  CMakeLists.txt  Pipfile  README.md  main.py  requirements.txt
src/: GameOfLife.cpp  GameOfLife.h  check_events.py  colors.py  constants.h  constants.py  evolve.py  game_of_live.py  globals.py  image.py  main.cpp  menu.py  my_math.py  notification.py  numba_otimization.py  screenshot.py  text.py
